@@ -1,6 +1,8 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+  - Restore the special-casing of overload checking. Moose will not report
+    overload subs like ("" as methods. (Dave Rolsky)
 
 0.21      2014-11-04 05:24:36Z
   - drop testing of MooseX::MarkAsMethods, now that Moose 2.1400 has better
